crates/reinhardt-core/crates/macros/tests/ui/path/fail/unclosed_brace.rs
// Test: URL pattern with unclosed brace should fail

use reinhardt_macros::path;

fn main() {
    let pattern = path!("polls/{id");
}
