crates/reinhardt-core/crates/macros/tests/ui/path/fail/unclosed_brace.stderr
error: Unclosed brace in URL pattern. Opening brace at position 6 has no matching closing brace
 --> tests/ui/path/fail/unclosed_brace.rs:6:25
  |
6 |     let pattern = path!("polls/{id");
  |                         ^^^^^^^^^^^
